[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/components/ItemCard.gd" id="1_script"]

[node name="ItemCard" type="PanelContainer"]
custom_minimum_size = Vector2(80, 80)
offset_right = 80.0
offset_bottom = 80.0
script = ExtResource("1_script")

[node name="Content" type="Control" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="Icon" type="TextureRect" parent="Content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="LevelBadge" type="Control" parent="Content"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -12.0
offset_right = 12.0
offset_bottom = 24.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Content/LevelBadge"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="SlotIndicator" type="Control" parent="Content"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -21.0
offset_top = -46.0
offset_right = 21.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0

[node name="Icon" type="TextureRect" parent="Content/SlotIndicator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="ActionIndicator" type="Label" parent="Content"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -20.0
offset_bottom = 23.0
grow_horizontal = 0
text = "â†‘"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EmptyLabel" type="Label" parent="Content"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 2
flat = true
